More work on first tutorial

--- a/tutorial_prep.ipynb
+++ b/tutorial_prep.ipynb
@@ -14,13 +14,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "58a8924a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import pandas as pd\n",
-    "\n",
     "from statsmodels.tsa.ar_model import AutoReg\n",
     "\n",
     "from unit_averaging import InlineFocusFunction, OptimalUnitAverager\n"
@@ -31,18 +31,7 @@
    "execution_count": null,
    "id": "c0c6ebe7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/moren/code/unit-averaging'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
@@ -54,130 +43,7 @@
    "execution_count": null,
    "id": "1ef5b049",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "datetime64[ns]",
-         "type": "datetime"
-        },
-        {
-         "name": "Aachen - Düren",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "Ahlen - Münster",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "Deutschland",
-         "rawType": "float64",
-         "type": "float"
-        }
-       ],
-       "ref": "1e56431d-eaad-4a1a-9ab0-a1c56d093554",
-       "rows": [
-        [
-         "2019-09-01 00:00:00",
-         "6.2",
-         "4.6",
-         "4.9"
-        ],
-        [
-         "2019-10-01 00:00:00",
-         "6.1",
-         "4.4",
-         "4.8"
-        ],
-        [
-         "2019-11-01 00:00:00",
-         "6.0",
-         "4.5",
-         "4.8"
-        ],
-        [
-         "2019-12-01 00:00:00",
-         "6.1",
-         "4.5",
-         "4.9"
-        ]
-       ],
-       "shape": {
-        "columns": 3,
-        "rows": 4
-       }
-      },
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Aachen - Düren</th>\n",
-       "      <th>Ahlen - Münster</th>\n",
-       "      <th>Deutschland</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2019-09-01</th>\n",
-       "      <td>6.2</td>\n",
-       "      <td>4.6</td>\n",
-       "      <td>4.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-10-01</th>\n",
-       "      <td>6.1</td>\n",
-       "      <td>4.4</td>\n",
-       "      <td>4.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-11-01</th>\n",
-       "      <td>6.0</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>4.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-12-01</th>\n",
-       "      <td>6.1</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>4.9</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            Aachen - Düren  Ahlen - Münster  Deutschland\n",
-       "2019-09-01             6.2              4.6          4.9\n",
-       "2019-10-01             6.1              4.4          4.8\n",
-       "2019-11-01             6.0              4.5          4.8\n",
-       "2019-12-01             6.1              4.5          4.9"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "german_data = pd.read_csv(\n",
     "    \"docs/examples/data/tutorial_data.csv\", parse_dates=True, index_col=\"period\"\n",
@@ -189,27 +55,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "7e591ad8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Aachen - Düren', 'Aalen', 'Ahlen - Münster', 'Annaberg-Buchholz',\n",
-       "       'Ansbach - Weißenburg', 'Aschaffenburg', 'Augsburg', 'Bad Homburg',\n",
-       "       'Bad Kreuznach', 'Bad Oldesloe',\n",
-       "       ...\n",
-       "       'Trier', 'Ulm', 'Weilheim', 'Wesel', 'Wiesbaden', 'Vechta', 'Würzburg',\n",
-       "       'Zwickau', 'Waiblingen', 'Weiden'],\n",
-       "      dtype='object', length=150)"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "regions = german_data.columns[:-1]\n",
     "regions\n"
@@ -217,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "277df101",
    "metadata": {},
    "outputs": [],
@@ -234,7 +83,28 @@
     "    ).fit(cov_type=\"HAC\", cov_kwds={\"maxlags\": 5})\n",
     "    # Add to dictionary\n",
     "    ind_estimates[region] = ar_results.params.to_numpy()\n",
-    "    ind_covar_ests[region] = ar_results.cov_params().to_numpy()\n"
+    "    ind_covar_ests[region] = ar_results.cov_params().to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed114f61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_region = \"Hamburg\"\n",
+    "target_data = german_data.loc[\"2019-12\", [target_region, \"Deutschland\"]].to_numpy().squeeze()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2bcc72cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_data"
    ]
   },
   {
@@ -244,9 +114,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "forecast_function = InlineFocusFunction(\n",
-    "    \n",
+    "forecast_hamburg = InlineFocusFunction(\n",
+    "    focus_function=lambda coef: coef[0]\n",
+    "    + coef[1] * target_data[0]\n",
+    "    + coef[2] * target_data[1],\n",
+    "    gradient=lambda x: np.array([1, target_data[0], target_data[1]]),\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a42bff7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "forecast_hamburg.focus_function(ind_estimates[target_region])"
    ]
   },
   {
@@ -257,8 +140,72 @@
    "outputs": [],
    "source": [
     "averager = OptimalUnitAverager(\n",
-    "    \n",
+    "    focus_function=forecast_hamburg,\n",
+    "    ind_estimates=ind_estimates,\n",
+    "    ind_covar_ests=ind_covar_ests,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38733405",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "averager.fit(target_id=\"Hamburg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53a2787a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "averager.weights_\n",
+    "averager.estimate_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99ee8567",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "averager.weights_.round(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "694d9b6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_germany(data_df, aab_shp, **kwargs):\n",
+    "    \"\"\"Plot a chloropleth map using data_df with shapes in aab_shp\"\"\"\n",
+    "\n",
+    "    # Clean data_series index\n",
+    "    data_df[\"aab\"] = data_df[\"aab\"].apply(\n",
+    "        lambda x: x.replace(\" - \", \"-\").replace(\"-\", \" - \")\n",
+    "    )\n",
+    "\n",
+    "    series_name = data_df.columns[-1]\n",
+    "\n",
+    "    merged_geo_data_df = aab_shp.merge(\n",
+    "        data_df,\n",
+    "        left_on=\"region\",\n",
+    "        right_on=\"aab\",\n",
+    "        how=\"outer\",\n",
+    "    )\n",
+    "\n",
+    "    # plot\n",
+    "    ax = merged_geo_data_df.to_crs(\"EPSG:25832\").plot(series_name, **kwargs)\n",
+    "    ax.axis(\"off\")\n",
+    "    # Return plot\n",
+    "    return ax\n"
    ]
   }
  ],
