--- a/docs/examples/tutorial_prep.ipynb
+++ b/docs/examples/tutorial_prep.ipynb
@@ -15,28 +15,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "304aa792",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "os.getcwd()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "58a8924a",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "import matplotlib.colors as colors\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from docs_plot_utils import plot_germany\n",
     "from statsmodels.tsa.ar_model import AutoReg\n",
     "\n",
-    "from germany_plot_utils import plot_germany\n",
     "from unit_averaging import InlineFocusFunction, OptimalUnitAverager\n"
    ]
   },
@@ -53,16 +41,6 @@
     "\n",
     "german_data.index = pd.DatetimeIndex(german_data.index.values, freq=\"MS\")\n",
     "german_data.iloc[-4:, [0, 2, -1]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14a32978",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "german_data = german_data.diff()"
    ]
   },
   {
@@ -192,13 +170,13 @@
    "outputs": [],
    "source": [
     "weight_dict = {}\n",
-    "for key, val in zip(averager.keys, averager.weights_):\n",
+    "for key, val in zip(averager.keys, averager.weights_, strict=False):\n",
     "    weight_dict[key] = val\n",
     "\n",
     "weight_df = pd.Series(weight_dict).reset_index()\n",
     "weight_df.columns = ['aab', 'weights']\n",
     "\n",
-    "fig, ax = plot_germany(weight_df, cmap='Purples', vmin=-0.005) "
+    "fig, ax = plot_germany(weight_df, cmap='Purples', vmin=-0.005)"
    ]
   },
   {
@@ -226,7 +204,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plot_germany(weight_df, cmap='Purples', vmin=-0.005) "
+    "fig, ax = plot_germany(weight_df, cmap='Purples', vmin=-0.005)"
    ]
   },
   {
