--- a/docs/examples/tutorial_prep.ipynb
+++ b/docs/examples/tutorial_prep.ipynb
@@ -19,7 +19,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from docs_plot_utils import plot_germany\n",
@@ -57,12 +56,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b5caa77c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract data on last month of target region\n",
+    "target_data = german_data.loc[\"2019-12\", [\"Frankfurt\", \"Deutschland\"]].to_numpy().squeeze().copy()\n",
+    "\n",
+    "# Construct focus function\n",
+    "forecast_cologne_jan_2020 = InlineFocusFunction(\n",
+    "    focus_function=lambda coef: coef[0]\n",
+    "    + coef[1] * target_data[0]\n",
+    "    + coef[2] * target_data[1],\n",
+    "    gradient=lambda coef: np.array([1, target_data[0], target_data[1]]),\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "277df101",
    "metadata": {},
    "outputs": [],
    "source": [
-    "german_data['Germany_lag'] = german_data['Deutschland'].shift(1)\n",
-    "german_data = german_data.iloc[2:, ]\n",
+    "german_data = german_data.diff()\n",
+    "german_data[\"Germany_lag\"] = german_data[\"Deutschland\"].shift(1)\n",
+    "german_data = german_data.iloc[2:,]\n",
+    "\n",
     "\n",
     "ind_estimates = {}\n",
     "ind_covar_ests = {}\n",
@@ -82,40 +102,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed114f61",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "target_region = \"Köln\"\n",
-    "target_data = (\n",
-    "    german_data.loc[\"2019-12\", [target_region, \"Deutschland\"]].to_numpy().squeeze()\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "608f92f7",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "forecast_hamburg = InlineFocusFunction(\n",
-    "    focus_function=lambda coef: coef[0]\n",
-    "    + coef[1] * target_data[0]\n",
-    "    + coef[2] * target_data[1],\n",
-    "    gradient=lambda x: np.array([1, target_data[0], target_data[1]]),\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2a42bff7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "forecast_hamburg.focus_function(ind_estimates[target_region])"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -125,7 +115,7 @@
    "outputs": [],
    "source": [
     "averager = OptimalUnitAverager(\n",
-    "    focus_function=forecast_hamburg,\n",
+    "    focus_function=forecast_cologne_jan_2020,\n",
     "    ind_estimates=ind_estimates,\n",
     "    ind_covar_ests=ind_covar_ests,\n",
     ")"
@@ -138,28 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "averager.fit(target_id=\"Hamburg\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "53a2787a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "averager.weights_\n",
-    "averager.estimate_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "99ee8567",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "averager.weights_[:10].round(3)"
+    "averager.fit(target_id=\"Frankfurt\")"
    ]
   },
   {
@@ -170,19 +139,24 @@
    "outputs": [],
    "source": [
     "weight_dict = {}\n",
-    "for key, val in zip(averager.keys, averager.weights_, strict=False):\n",
+    "for key, val in zip(averager.keys, averager.weights, strict=False):\n",
     "    weight_dict[key] = val\n",
     "\n",
     "weight_df = pd.Series(weight_dict).reset_index()\n",
-    "weight_df.columns = ['aab', 'weights']\n",
+    "weight_df.columns = [\"aab\", \"weights\"]\n",
     "\n",
-    "fig, ax = plot_germany(weight_df, cmap='Purples', vmin=-0.005)"
+    "fig, ax = plot_germany(\n",
+    "    weight_df,\n",
+    "    \"Weight in Averaging Combination\",\n",
+    "    cmap=\"Purples\",\n",
+    "    vmin=-0.005,\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed2e41fb",
+   "id": "0b5cb463",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -190,27 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f3c2310",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "averager.keys[averager.weights_.argmax()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b1455c68",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, ax = plot_germany(weight_df, cmap='Purples', vmin=-0.005)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "84b61d58",
+   "id": "5fcecba9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -218,7 +172,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.13.1)",
    "language": "python",
    "name": "python3"
   },
